# Kaku

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_CN.md  TOP_TAB_LAYOUT_JITTER_HANDOFF_2026-03-10.md
.cargo/: config.toml
.github/: RELEASE_NOTES.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml  update-contributors.yml
assets/shell-integration/: check_config_version.sh  config_update_highlights.tsv  first_run.sh  install_cli_tools.sh  install_delta.sh  kaku.sh  setup_fish.sh  setup_zsh.sh
config/src/: config.rs  font.rs  keyassignment.rs  lib.rs  lua.rs
crates/wezterm-ssh/: Cargo.toml
docs/: features.md
kaku/: Cargo.toml
kaku-gui/: Cargo.toml  build.rs
kaku-gui/src/: ai_auth.rs  ai_client.rs  ai_conversations.rs  ai_gemini.rs  ai_state.rs  ai_tools.rs  commands.rs  frontend.rs  glyphcache.rs  inputmap.rs  main.rs  renderstate.rs  startup_trace.rs  tabbar.rs  update.rs
kaku/src/: assistant_config.rs  auto_cmd.rs  config_cmd.rs  doctor.rs  init.rs  main.rs  reset.rs  update.rs  utils.rs
kaku/src/ai_config/: mod.rs  theme.rs  tui.rs
kaku/src/ai_config/tui/: ui.rs
kaku/src/config_tui/: mod.rs  ui.rs
mux/: Cargo.toml
mux/src/: domain.rs  lib.rs  localpane.rs  pane.rs  renderable.rs  ssh.rs  tab.rs
scripts/: build-kaku-macos.sh  build.sh  download_vendor.sh  notarize.sh  pre-commit
website/: .gitignore  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
website/public/: robots.txt
website/tests/: smoke.spec.ts
window/src/: connection.rs  (+2 more)
(+115 files in other folders)
